Fix example file

--- a/example.env
+++ b/example.env
@@ -1,9 +1,16 @@
-COMPOSE_PROJECT_NAME=epiclever-moodle
+COMPOSE_PROJECT_NAME=moodle
+
+# Define environment variable. Options: dev, prod
+COMPOSE_PROJECT_ENV=dev
+
+# Images
+MOODLE_DOCKER_PHP_VERSION=8.2
 
 # MySQL Root Password (used by both Moodle and WordPress DB containers)
 MYSQL_ROOT_PASSWORD=password
 
 # Moodle Database User and Password
+MOODLE_DOCKER_WEB_HOST=lms.local.bombano.com
 MOODLE_DB_USER=moodleuser
 MOODLE_DB_PASSWORD=moodle_password
 
