Fix Caddy server incompatibility with Moodle

--- a/example.env
+++ b/example.env
@@ -1,19 +1,29 @@
-COMPOSE_PROJECT_NAME=moodle
+COMPOSE_PROJECT_NAME=lpi
 
 # Define environment variable. Options: dev, prod
 COMPOSE_PROJECT_ENV=dev
 
-# Images
-MOODLE_DOCKER_PHP_VERSION=8.2
-
 # MySQL Root Password (used by both Moodle and WordPress DB containers)
-MYSQL_ROOT_PASSWORD=password
+MYSQL_ROOT_PASSWORD=examplepass
 
+##### MOODLE #####
 # Moodle Database User and Password
+# Moodle Instance
 MOODLE_DOCKER_WEB_HOST=lms.local.bombano.com
-MOODLE_DB_USER=moodleuser
-MOODLE_DB_PASSWORD=moodle_password
+MOODLE_DATABASE_NAME=exampledb
+MOODLE_DB_USER=exampleuser
+# Moodle MySql
+MOODLE_DB_NAME=moodle
+MOODLE_DB_USER=webmaster
+MOODLE_DB_PASSWORD=examplepass
 
+##### WORDPRESS #####
 # WordPress Database User and Password
-WORDPRESS_DB_USER=wordpressuser
-WORDPRESS_DB_PASSWORD=wordpress_password
+WORDPRESS_DB_USER=webmaster
+WORDPRESS_DB_NAME=lpi-wordpress-db
+WORDPRESS_DB_PASSWORD=6Sends$Extortion4$Monument9$helpless$wordpress
+
+WORDPRESS_TITLE=LPI Academy
+WORDPRESS_ADMIN_USER=admin
+WORDPRESS_ADMIN_PASSWORD=admin_password
+WORDPRESS_ADMIN_EMAIL=admin@example.com
