--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-
   caddy:
     image: caddy:alpine
     container_name: ${COMPOSE_PROJECT_NAME}_caddy
@@ -23,20 +22,23 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
-        
+
   moodle:
-    image: 'moodlehq/moodle-php-apache:${MOODLE_DOCKER_PHP_VERSION}'
+    build:
+      context: ./apps/moodle
+      dockerfile: Dockerfile
     container_name: ${COMPOSE_PROJECT_NAME}_moodle
     volumes:
       - ./data/moodle_data/html/moodle:/var/www/html
-      - ./data/moodle_data/moodledata:/var/moodledata
-      - ./apps/moodle/php.ini:/usr/local/etc/php/conf.d/php.ini
+      - ./data/moodle_data/moodledata:/var/www/moodledata
     environment:
       MOODLE_DOCKER_WEB_HOST: ${MOODLE_DOCKER_WEB_HOST:-lms.local.bombano.com}
       MOODLE_DATABASE_HOST: ${MOODLE_DATABASE_HOST:-moodle-db}
       MOODLE_DATABASE_NAME: ${MOODLE_DATABASE_NAME:-exampledb}
       MOODLE_DATABASE_USER: ${MOODLE_DB_USER:-exampleuser}
       MOODLE_DATABASE_PASSWORD: ${MOODLE_DB_PASSWORD:-examplepass}
+    depends_on:
+      - moodle-db
     networks:
       - backend
       - frontend
@@ -47,15 +49,16 @@ services:
         max-file: "3"
 
   moodle-db:
-    image: mysql:5.7
+    image: mysql:8.0
     container_name: ${COMPOSE_PROJECT_NAME}_moodle-db
     volumes:
       - ./data/moodle_data/db:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: moodle
-      MYSQL_USER: ${MOODLE_DB_USER}
-      MYSQL_PASSWORD: ${MOODLE_DB_PASSWORD}
+      MYSQL_DATABASE: ${MOODLE_DB_NAME:-exampledb}
+      MYSQL_USER: ${MOODLE_DB_USER:-exampleuser}
+      MYSQL_PASSWORD: ${MOODLE_DB_PASSWORD:-examplepass}
+    command: --default-authentication-plugin=mysql_native_password
     networks:
       - backend
     restart: on-failure
@@ -72,7 +75,6 @@ services:
     volumes:
       - ./data/wordpress_data/html/wordpress:/var/www/html
     environment:
-      # Database configuration
       WORDPRESS_DB_USER: ${WORDPRESS_DB_USER:-exampleuser}
       WORDPRESS_DB_NAME: ${WORDPRESS_DB_NAME:-exampledb}
       WORDPRESS_DB_PASSWORD: ${WORDPRESS_DB_PASSWORD:-examplepass}
@@ -88,7 +90,7 @@ services:
         max-file: "3"
 
   wordpress-db:
-    image: mysql:5.7
+    image: mysql:8.0
     volumes:
       - ./data/wordpress_data/db:/var/lib/mysql
     environment:
@@ -116,26 +118,12 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
-  
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: ${COMPOSE_PROJECT_NAME}_phpmyadmin
-    environment:
-      PMA_HOST: wordpress-db
-      PMA_PORT: 3306
-    ports:
-      - "8080:80"
-    depends_on:
-      - wordpress-db
-    networks:
-      - backend
 
 volumes:
   caddy_data: {}
   caddy_config: {}
-  moodle_data:
-  wordpress_data:
-  nginx_conf:
+  moodle_data: {}
+  wordpress_data: {}
 
 networks:
   frontend:
